--- a/src/app/components/layouts/main-sidebar/main-sidebar.component.html
+++ b/src/app/components/layouts/main-sidebar/main-sidebar.component.html
@@ -18,7 +18,7 @@
 
     <div class="form-inline">
       <div class="input-group" data-widget="sidebar-search">
-        <input class="form-control form-control-sidebar" type="search" placeholder="Search" aria-label="Search">
+        <input class="form-control form-control-sidebar" [(ngModel)]="search" type="search" placeholder="Search" >
         <div class="input-group-append">
           <button class="btn btn-sidebar">
             <i class="fas fa-search fa-fw"></i>
@@ -30,42 +30,48 @@
     <nav class="mt-2">
       <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
         <!-- Add icons to the links using the .nav-icon class with font-awesome or any other icon font library -->
-
-        @for (menu of menus; track menu){
+        @for (menu of menus |menu:search; track menu){
         @if(menu.isTitle){
         <li class="nav-header">{{menu.name}}</li>
         }
         @else if (menu.subMenus.length>0) {
         <li class="nav-item">
           <a class="nav-link">
-            <i class="nav-icon fas fa-tachometer-alt"></i>
+            <i class="nav-icon {{menu.icon}}"></i>
             <p>
               {{menu.name}}
               <i class="right fas fa-angle-left"></i>
             </p>
           </a>
           <ul class="nav nav-treeview">
-            @for (subMenu of menu.subMenus; track subMenu) {
+            @for (subMenu of menu.subMenus |menu:search; track subMenu) {
             <li class="nav-item">
-              <a class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Dashboard v1</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Dashboard v2</p>
+              <a [routerLink]="subMenu.url" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
+                class="nav-link">
+                <i class="{{subMenu.icon}} me-2"></i>
+                <p>{{subMenu.name}}</p>
               </a>
             </li>
             }
-      
+
           </ul>
+        </li>
+        }
+        @else {
+        <li class="nav-item">
+          <a [routerLink]="menu.url" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
+            class="nav-link">
+            <i class="nav-icon {{menu.icon}}"></i>
+            <p>
+              {{menu.name}}
+            </p>
+          </a>
         </li>
         }
         }
 
 
+        <li class="nav-header">EXAMPLES</li>
         <li class="nav-item">
           <a href="../widgets.html" class="nav-link">
             <i class="nav-icon fas fa-th"></i>
@@ -135,16 +141,6 @@
             </li>
           </ul>
         </li>
-        <li class="nav-header">EXAMPLES</li>
-        <li class="nav-item">
-          <a href="../calendar.html" class="nav-link">
-            <i class="nav-icon far fa-calendar-alt"></i>
-            <p>
-              Calendar
-              <span class="badge badge-info right">2</span>
-            </p>
-          </a>
-        </li>
         <li class="nav-item menu-open">
           <a href="#" class="nav-link active">
             <i class="nav-icon far fa-plus-square"></i>
@@ -197,14 +193,7 @@
             </li>
           </ul>
         </li>
-
         <li class="nav-header">MISCELLANEOUS</li>
-        <li class="nav-item">
-          <a href="/assets/iframe.html" class="nav-link">
-            <i class="nav-icon fas fa-ellipsis-h"></i>
-            <p>Tabbed IFrame Plugin</p>
-          </a>
-        </li>
         <li class="nav-item">
           <a href="https://adminlte.io/docs/3.1/" class="nav-link">
             <i class="nav-icon fas fa-file"></i>
