--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,45 @@
-<p>login works!</p>
+<body class="hold-transition login-page">
+  <div class="login-box">
+    <div class="card card-outline card-primary">
+      <div class="card-header text-center">
+        <a class="h1">MAZMAN <b>ERP</b></a>
+      </div>
+      <div class="card-body">
+        <p class="login-box-msg">Log in / Sign up</p>
+
+        <div class="input-group mb-3">
+          <input [(ngModel)]="model.emailOrUserName" type="email" class="form-control" placeholder="Email">
+          <div class="input-group-append">
+            <div class="input-group-text">
+              <span class="fas fa-envelope"></span>
+            </div>
+          </div>
+        </div>
+        <div class="input-group mb-3">
+          <input [(ngModel)]="model.password" type="password" class="form-control" placeholder="Password">
+          <div class="input-group-append">
+            <div class="input-group-text">
+              <span class="fas fa-lock"></span>
+            </div>
+          </div>
+        </div>
+        <button (click)="signIn()" class="btn btn-primary btn-block">Sign In</button>
+
+        <div class="social-auth-links text-center mt-2 mb-3">
+          <a class="btn btn-block btn-danger">
+            <i class="fab fa-google mr-2"></i> Sign in using Google
+          </a>
+          <a class="btn btn-block btn-primary">
+            <i class="fab fa-twitter mr-2"></i> Sign in using Twitter
+          </a>
+        </div>
+        <p class="mb-1">
+          <a class="text-center">I forgot my password</a>
+        </p>
+        <p class="mb-0">
+          <a class="text-center">Register a new membership</a>
+        </p>
+      </div>
+    </div>
+  </div>
+</body>
