--- a/src/app/components/layouts/main-sidebar/main-sidebar.component.html
+++ b/src/app/components/layouts/main-sidebar/main-sidebar.component.html
@@ -12,7 +12,7 @@
         <img src="/assets/dist/img/avatar-smiley.png" class="img-circle elevation-2" alt="User Image">
       </div>
       <div class="info">
-        <a href="#" class="d-block">Fatih OZER</a>
+        <a href="#" class="d-block">{{auth.user.name}}</a>
       </div>
     </div>
 
