--- a/src/app/components/customers/customer.component.css
+++ b/src/app/components/customers/customer.component.css
@@ -5,3 +5,15 @@
 .fa-user-plus {
   margin-right: 5px;
 }
+
+/* Hide the arrows in input type number */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Hide the arrows in input type number */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
