--- a/src/app/components/layouts/footer/footer.component.html
+++ b/src/app/components/layouts/footer/footer.component.html
@@ -2,5 +2,6 @@
   <div class="float-right d-none d-sm-block">
     Mazman<b> ERP</b>
   </div>
-  <strong>Copyright &copy; 2024 <a>Fatih Ozer</a>.</strong> All rights reserved.
+  <strong>Copyright &copy; 2024 <a href="https://github.com/mazmanoglu?tab=repositories" target="_blank">Fatih Ozer</a>.</strong> All
+  rights reserved.
 </footer>
