--- a/src/app/components/customers/customer.component.css
+++ b/src/app/components/customers/customer.component.css
@@ -13,7 +13,8 @@ input[type="number"]::-webkit-outer-spin-button {
   margin: 0;
 }
 
-/* Hide the arrows in input type number */
+/* Hide the arrows in input type number 
 input[type="number"] {
   -moz-appearance: textfield;
 }
+*/
