--- a/src/app/components/recipe-details/recipe-details.component.html
+++ b/src/app/components/recipe-details/recipe-details.component.html
@@ -1,1 +1,105 @@
-<p>recipe-details works!</p>
+<app-blank pageName="{{recipe.product.name}} Recipe Detail" [routes]="['Recipes',recipe.product.name +' Recipe Detail']">
+  <app-section sectionTitle="{{recipe.product.name}} Recipe Detail">
+
+    <div class="form-group mt-2 row">
+
+      @if (!isUpdateFormActive) {
+      <!-- Create Form -->
+      <div class="col-9">
+        <form #createForm="ngForm" autocomplete="off" (ngSubmit)="create(createForm)">
+          <div class="row">
+            <div class="col-4">
+              <label>Product</label>
+              <select class="form-control" [(ngModel)]="createModel.productId" name="productId" required>
+                @for (product of products; track product) {
+                <option [value]="product.id">{{product.name}}</option>
+                }
+              </select>
+              <div class="invalid-feedback"></div>
+            </div>
+            <div class="col-4">
+              <label>Quantity</label>
+              <input type="text" class="form-control" name="quantity" [(ngModel)]="createModel.quantity" required>
+              <div class="invalid-feedback"></div>
+            </div>
+            <div class="col-4">
+              <label>Transactions</label>
+              <br>
+              <button type="submit" class="btn btn-outline-warning"><i class="fa fa-plus"></i></button>
+            </div>
+          </div>
+        </form>
+      </div>
+      }@else {
+      <!-- Update Form -->
+      <div class="col-9">
+        <form #updateForm="ngForm" autocomplete="off" (ngSubmit)="update(updateForm)">
+          <div class="row">
+            <div class="col-4">
+              <label>Product</label>
+              <select class="form-control" [(ngModel)]="updateModel.productId" name="updateProductId" required>
+                @for (product of products; track product) {
+                <option [value]="product.id">{{product.name}}</option>
+                }
+              </select>
+              <div class="invalid-feedback"></div>
+            </div>
+            <div class="col-4">
+              <label>Quantity</label>
+              <input type="text" class="form-control" name="updateQuantity" [(ngModel)]="updateModel.quantity" required>
+              <div class="invalid-feedback"></div>
+            </div>
+            <div class="col-4">
+              <label>Transactions</label>
+              <br>
+              <button type="submit" class="btn btn-outline-info"><i
+                  class="fa-solid fa-book-journal-whills"></i></button>
+              <button type="button" class="btn btn-outline-danger" (click)="isUpdateFormActive=false"><i
+                  class="fa-solid fa-thumbs-down"></i></button>
+            </div>
+          </div>
+        </form>
+      </div>
+      }
+
+      <div class="col-3"><input [(ngModel)]="search" type="search" class="form-control" placeholder="Search..."></div>
+    </div>
+    <div class="form-group mt2">
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th>#</th>
+            <th>Product Name</th>
+            <th>Quantity</th>
+            <th>Transactions</th>
+          </tr>
+        </thead>
+        <tbody>
+          @for(data of recipe.details| recipeDetail:search; track data){
+          <tr>
+            <td>{{$index + 1}}</td>
+            <td>{{data.product.name}}</td>
+            <td>{{data.quantity}}</td>
+
+            <td>
+              @if (!isUpdateFormActive) {
+              <button (click)="get(data)" class="btn btn-outline-primary btn-sm">
+                <i class="fa fa-jedi"></i>
+              </button>
+              <button (click)="deleteById(data)" class="btn btn-outline-danger btn-sm">
+                <i class="fa-brands fa-galactic-republic"></i>
+              </button>
+              }
+
+            </td>
+          </tr>
+          }
+        </tbody>
+      </table>
+    </div>
+  </app-section>
+</app-blank>
+
+<!-- Create Modal -->
+
+<!-- update Modal -->
