--- a/src/app/components/recipes/recipes.component.html
+++ b/src/app/components/recipes/recipes.component.html
@@ -22,7 +22,7 @@
             <td>{{$index + 1}}</td>
             <td>{{recip.product.name}}</td>
             <td>
-              <button class="btn btn-outline-primary btn-sm me-1"><i class="fa-solid fa-info me-1"></i></button>
+              <button routerLink="/recipe-details/{{recip.id}}" class="btn btn-outline-primary btn-sm me-1"><i class="fa-solid fa-info me-1"></i></button>
               <button (click)="deleteById(recip)" class="btn btn-outline-danger btn-sm">
                 <i class="fa-brands fa-galactic-republic"></i>
               </button>
