--- a/src/app/components/orders/orders.component.html
+++ b/src/app/components/orders/orders.component.html
@@ -73,7 +73,7 @@
               <option value="customer.[id]">{{customer.name}}</option>
               }
             </select>
-            <div class=" invalid-feedback"></div>
+            <div class="invalid-feedback"></div>
           </div>
 
           <div class="form-group mt-2">
@@ -89,7 +89,8 @@
               <div class="col-3">
                 <div class="form-group">
                   <label>Product</label>
-                  <select class="form-control" [(ngModel)]="detail.productId" [ngModelOptions]="{standalone:true}">
+                  <select class="form-control" [(ngModel)]="createDetail.productId"
+                    [ngModelOptions]="{standalone:true}">
                     @for (product of products; track product) {
                     <option [value]="product.id">{{product.name}}</option>
                     }
@@ -100,14 +101,14 @@
               <div class="col-3">
                 <div class="form-group">
                   <label>Quantity</label>
-                  <input class="form-control" [(ngModel)]="detail.quantity" [ngModelOptions]="{standalone:true}">
+                  <input class="form-control" [(ngModel)]="createDetail.quantity" [ngModelOptions]="{standalone:true}">
                 </div>
               </div>
 
               <div class="col-3">
                 <div class="form-group">
                   <label>Unit Price</label>
-                  <input class="form-control" [(ngModel)]="detail.price" [ngModelOptions]="{standalone:true}">
+                  <input class="form-control" [(ngModel)]="createDetail.price" [ngModelOptions]="{standalone:true}">
                 </div>
               </div>
 
@@ -115,7 +116,7 @@
                 <div class="form-group">
                   <label>Total</label>
                   <br>
-                  <label>{{(detail.price*detail.quantity)+'€'}}</label>
+                  <label>{{(createDetail.price*createDetail.quantity)| trCurrency:' €':true}}</label>
                 </div>
               </div>
 
@@ -142,8 +143,8 @@
                     <td>{{$index +1}}</td>
                     <td>{{data.product.name}}</td>
                     <td>{{data.quantity}}</td>
-                    <td>{{data.price '€'}</td>
-                    <td>{{(data.price*data.quantity) + '€'}}</td>
+                    <td>{{data.price | trCurrency:' €':true}}</td>
+                    <td>{{(data.price*data.quantity) | trCurrency:'€': true}}</td>
                     <td>
                       <button (click)="removeDetail($index)" class="btn btn-outline-danger btn-sm">
                         <i class="fa-solid fa-trash"></i>
@@ -165,9 +166,9 @@
   </div>
 </div>
 
-<!-- update Modal 
+<!-- update Modal -->
 <div class="modal fade" id="updateModal" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
         <h1 class="modal-title fs-5">Update Warehouse</h1>
@@ -179,34 +180,102 @@
       <form formValidate #updateForm="ngForm" autocomplete="off" (ngSubmit)="update(updateForm)">
         <div class="modal-body">
           <div class="form-group">
-            <label>Warehouse Name</label>
-            <input type="text" required minlength="3" [(ngModel)]="updateModel.name" class="form-control"
-              name="updateName">
+            <label>Date</label>
+            <input type="date" required [(ngModel)]="updateModel.date" class="form-control" name="updateDate">
             <div class="invalid-feedback"></div>
           </div>
-          <div class="form-group row">
-            <div class="col-6">
-              <div class="form-group">
-                <label>City</label>
-                <input type="text" required minlength="3" [(ngModel)]="updateModel.city" class="form-control"
-                  name="updateCity">
-                <div class="invalid-feedback"></div>
-              </div>
-            </div>
-            <div class="col-6">
-              <div class="form-group">
-                <label>Postcode</label>
-                <input type="number" [(ngModel)]="updateModel.postCode" required minlength="4" maxlength="4"
-                  class="form-control" name="updatePostcode">
-                <div class="invalid-feedback"></div>
-              </div>
-            </div>
-          </div>
-          <div class="form-group">
-            <label>Address</label>
-            <textarea class="form-control" required minlength="3" [(ngModel)]="updateModel.fullAddress"
-              name="updateFullAddress" rows="5"></textarea>
+
+          <div class="form-group mt-2">
+            <label>Customer Info</label>
+            <select class="form-control" name="updateCustomer" [(ngModel)]="updateModel.customerId" required>
+              @for (customer of customers; track customer) {
+              <option [value]="customer.id">{{customer.name}}</option>
+              <option value="customer.[id]">{{customer.name}}</option>
+              }
+            </select>
             <div class="invalid-feedback"></div>
+          </div>
+
+          <div class="form-group mt-2">
+            <label>Delivery Date</label>
+            <input type="date" required [(ngModel)]="updateModel.deliveryDate" class="form-control"
+              name="updateDeliveryDate">
+            <div class="invalid-feedback"></div>
+          </div>
+
+          <hr>
+
+          <div class="form-group mt-2">
+            <div class="row">
+              <div class="col-3">
+                <div class="form-group">
+                  <label>Product</label>
+                  <select class="form-control" [(ngModel)]="updateDetail.productId"
+                    [ngModelOptions]="{standalone:true}">
+                    @for (product of products; track product) {
+                    <option [value]="product.id">{{product.name}}</option>
+                    }
+                  </select>
+                </div>
+              </div>
+
+              <div class="col-3">
+                <div class="form-group">
+                  <label>Quantity</label>
+                  <input class="form-control" [(ngModel)]="updateDetail.quantity" [ngModelOptions]="{standalone:true}">
+                </div>
+              </div>
+
+              <div class="col-3">
+                <div class="form-group">
+                  <label>Unit Price</label>
+                  <input class="form-control" [(ngModel)]="updateDetail.price" [ngModelOptions]="{standalone:true}">
+                </div>
+              </div>
+
+              <div class="col-3">
+                <div class="form-group">
+                  <label>Total</label>
+                  <br>
+                  <label>{{(updateDetail.price*updateDetail.quantity)| trCurrency:' €':true}}</label>
+                </div>
+              </div>
+
+              <div class="col-12">
+                <button type=" button" class="btn btn-outline-warning" (click)="addUpdateDetail()"><i
+                    class="fa fa-dolly"></i></button>
+              </div>
+            </div>
+            <div class="mt-2">
+              <table class="table table-hover">
+                <thead>
+                  <tr>
+                    <th>#</th>
+                    <th>Product Name</th>
+                    <th>Quantity</th>
+                    <th>Unit Price</th>
+                    <th>Total Price</th>
+                    <th>Transactions</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  @for (data of updateModel.details; track data) {
+                  <tr>
+                    <td>{{$index +1}}</td>
+                    <td>{{data.product.name}}</td>
+                    <td>{{data.quantity}}</td>
+                    <td>{{data.price | trCurrency:' €':true}}</td>
+                    <td>{{(data.price*data.quantity) | trCurrency:'€': true}}</td>
+                    <td>
+                      <button (click)="removeUpdateDetail($index)" class="btn btn-outline-danger btn-sm">
+                        <i class="fa-solid fa-trash"></i>
+                      </button>
+                    </td>
+                  </tr>
+                  }
+                </tbody>
+              </table>
+            </div>
           </div>
         </div>
         <div class="modal-footer">
@@ -216,4 +285,3 @@
     </div>
   </div>
 </div>
--->
