--- a/src/app/components/orders/orders.component.css
+++ b/src/app/components/orders/orders.component.css
@@ -2,6 +2,10 @@
   margin-right: 10px;
 }
 
+.btn-outline-info {
+  margin-right: 10px;
+}
+
 .fa-folder-tree {
   margin-right: 5px;
 }
@@ -16,4 +20,3 @@ input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
-
